[gd_scene load_steps=19 format=3 uid="uid://c4x11xp0ovw4k"]

[ext_resource type="Script" path="res://Game-Off-2024/UI/UI Scripts/optionsmenu.gd" id="1_v5dkl"]
[ext_resource type="Texture2D" uid="uid://bm7ej5ncexoic" path="res://Game-Off-2024/UI/Images/second menu background hitanimal.png" id="2_5p42f"]
[ext_resource type="Script" path="res://Game-Off-2024/UI/UI Scripts/volume.gd" id="4_iegn8"]
[ext_resource type="Texture2D" uid="uid://cmmuhbne1j56o" path="res://Game-Off-2024/UI/Images/bullet cursor.png" id="4_nup0w"]
[ext_resource type="Texture2D" uid="uid://8m676u04h7c6" path="res://Game-Off-2024/UI/Images/wing cursor.png" id="6_h02ee"]
[ext_resource type="Script" path="res://Game-Off-2024/UI/UI Scripts/menu_cursor.gd" id="7_6iccq"]
[ext_resource type="AudioStream" uid="uid://bedr4qrkcxqqu" path="res://Game-Off-2024/UI/Sounds/meaty-gunshot-101257.mp3" id="8_7r2tc"]
[ext_resource type="AudioStream" uid="uid://b1kb70sku8kvu" path="res://Game-Off-2024/UI/Sounds/explosive-glass-shattering-09-190267.mp3" id="9_anq6k"]
[ext_resource type="PackedScene" uid="uid://t6nyogjyt60j" path="res://Game-Off-2024/UI/UI Scenes/window_mode_button.tscn" id="10_3t4eq"]

[sub_resource type="Curve" id="Curve_kxsd5"]
_data = [Vector2(0.0234375, 1), 0.0, 0.0, 0, 0, Vector2(0.769531, 0.311889), 0.0, 0.0, 0, 0, Vector2(0.980469, 0.00488591), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="CurveTexture" id="CurveTexture_l2b1e"]
curve = SubResource("Curve_kxsd5")

[sub_resource type="Gradient" id="Gradient_vkq7q"]
offsets = PackedFloat32Array(0.491228, 0.644737)
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_oak0q"]
gradient = SubResource("Gradient_vkq7q")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_4ri5m"]
particle_flag_disable_z = true
emission_shape = 3
emission_box_extents = Vector3(400, 100, 1)
gravity = Vector3(40, 98, 0)
scale_max = 3.0
color_initial_ramp = SubResource("GradientTexture1D_oak0q")
alpha_curve = SubResource("CurveTexture_l2b1e")
turbulence_enabled = true
turbulence_noise_speed_random = 0.0
turbulence_influence_min = 0.02
turbulence_influence_max = 0.08

[sub_resource type="SystemFont" id="SystemFont_w24m7"]
font_names = PackedStringArray("VCR OSD Mono")
force_autohinter = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_lpjuu"]

[sub_resource type="SystemFont" id="SystemFont_f1lt8"]
font_names = PackedStringArray("VCR OSD Mono")
force_autohinter = true

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_bd0pk"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_v5dkl")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_5p42f")

[node name="Snow" type="GPUParticles2D" parent="."]
position = Vector2(200, 0)
amount = 200
process_material = SubResource("ParticleProcessMaterial_4ri5m")
lifetime = 10.0
preprocess = 30.0

[node name="VBoxContainer" type="VBoxContainer" parent="."]
texture_filter = 1
layout_mode = 0
offset_left = 280.0
offset_top = 21.0
offset_right = 632.0
offset_bottom = 217.0
scale = Vector2(0.2, 0.2)
theme_override_constants/separation = 57

[node name="OptionsButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.815686, 0.32549, 1)
theme_override_colors/font_focus_color = Color(1, 0.815686, 0.32549, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_w24m7")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_lpjuu")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_lpjuu")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_lpjuu")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_lpjuu")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_lpjuu")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_lpjuu")
theme_override_styles/hover = SubResource("StyleBoxEmpty_lpjuu")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_lpjuu")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_lpjuu")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_lpjuu")
theme_override_styles/normal = SubResource("StyleBoxEmpty_lpjuu")
text = "Options"

[node name="BackButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_hover_color = Color(1, 0.815686, 0.32549, 1)
theme_override_colors/font_focus_color = Color(1, 0.815686, 0.32549, 1)
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_fonts/font = SubResource("SystemFont_f1lt8")
theme_override_font_sizes/font_size = 100
theme_override_styles/focus = SubResource("StyleBoxEmpty_bd0pk")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_bd0pk")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_bd0pk")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_bd0pk")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_bd0pk")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_bd0pk")
theme_override_styles/hover = SubResource("StyleBoxEmpty_bd0pk")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_bd0pk")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_bd0pk")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_bd0pk")
theme_override_styles/normal = SubResource("StyleBoxEmpty_bd0pk")
text = "Back"

[node name="menu_cursor" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 36.0
offset_bottom = 16.0
texture = ExtResource("6_h02ee")
script = ExtResource("7_6iccq")
menu_parent_path = NodePath("../VBoxContainer")
cursor_offset = Vector2(-120, -6)

[node name="cursorsound" type="AudioStreamPlayer2D" parent="menu_cursor"]
stream = ExtResource("8_7r2tc")
volume_db = -14.076
pitch_scale = 1.38
bus = &"SFX"

[node name="confirmsound" type="AudioStreamPlayer2D" parent="menu_cursor"]
position = Vector2(157.7, 142)
scale = Vector2(0.2, 0.2)
stream = ExtResource("9_anq6k")
volume_db = -10.0
pitch_scale = 1.55
bus = &"SFX"

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 68.0
offset_right = 629.0
offset_bottom = 397.0
scale = Vector2(0.85, 0.85)
theme_override_constants/side_margin = 0
theme_override_fonts/font = SubResource("SystemFont_w24m7")
theme_override_font_sizes/font_size = 21
current_tab = 0

[node name="Sound" type="VBoxContainer" parent="TabContainer"]
layout_mode = 2
theme_override_constants/separation = 16
metadata/_tab_index = 0

[node name="Master" type="Label" parent="TabContainer/Sound"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_w24m7")
theme_override_font_sizes/font_size = 26
text = "Master"
uppercase = true

[node name="master" type="HSlider" parent="TabContainer/Sound"]
layout_mode = 2
size_flags_vertical = 1
theme_override_icons/grabber = ExtResource("4_nup0w")
theme_override_icons/grabber_highlight = ExtResource("4_nup0w")
max_value = 1.0
step = 0.1
script = ExtResource("4_iegn8")
bus_name = "Master"

[node name="Music" type="Label" parent="TabContainer/Sound"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_w24m7")
theme_override_font_sizes/font_size = 26
text = "Music"
uppercase = true

[node name="music" type="HSlider" parent="TabContainer/Sound"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("4_nup0w")
theme_override_icons/grabber_highlight = ExtResource("4_nup0w")
max_value = 1.0
step = 0.1
script = ExtResource("4_iegn8")
bus_name = "Music"

[node name="Sound Effects" type="Label" parent="TabContainer/Sound"]
layout_mode = 2
theme_override_fonts/font = SubResource("SystemFont_w24m7")
theme_override_font_sizes/font_size = 26
text = "Sound Effects"
uppercase = true

[node name="sfx" type="HSlider" parent="TabContainer/Sound"]
layout_mode = 2
theme_override_icons/grabber = ExtResource("4_nup0w")
theme_override_icons/grabber_highlight = ExtResource("4_nup0w")
max_value = 1.0
step = 0.1
script = ExtResource("4_iegn8")
bus_name = "SFX"

[node name="Graphics" type="VBoxContainer" parent="TabContainer"]
visible = false
layout_mode = 2
metadata/_tab_index = 1

[node name="Window_Mode_Button" parent="TabContainer/Graphics" instance=ExtResource("10_3t4eq")]
layout_mode = 2

[connection signal="pressed" from="VBoxContainer/BackButton" to="." method="_on_back_pressed"]
